[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyAdobeAnalytics"
version = "1.0.0"
authors = [
  { name="Varnit Singh", email="varnitsingh25@gmail.com" },
]
description = "This is an attempt at a usable python library to query report data from Adobe Analytics 1.4 API."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/varnitsingh/easyAdobeAnalytics"
Issues = "https://github.com/varnitsingh/easyAdobeAnalytics/issues"